@@ -57,20 +57,20 @@ public class PhoneNumberToCarrierMapper {
   }
 
   /**
-   * Returns a text description for the given phone number, in the language provided. The
-   * description consists of the name of the carrier the number was originally allocated to, however
-   * if the country supports mobile number portability the number might not belong to the returned
-   * carrier anymore. If no mapping is found an empty string is returned.
+   * Returns a carrier name for the given phone number, in the language provided. The carrier name
+   * is the one the number was originally allocated to, however if the country supports mobile
+   * number portability the number might not belong to the returned carrier anymore. If no mapping
+   * is found an empty string is returned.
    *
    * <p>This method assumes the validity of the number passed in has already been checked, and that
    * the number is suitable for carrier lookup. We consider mobile and pager numbers possible
    * candidates for carrier lookup.
    *
-   * @param number  a valid phone number for which we want to get a text description
-   * @param languageCode  the language code for which the description should be written
-   * @return  a text description for the given language code for the given phone number
+   * @param number  a valid phone number for which we want to get a carrier name
+   * @param languageCode  the language code in which the name should be written
+   * @return  a carrier name for the given phone number
    */
-  public String getDescriptionForValidNumber(PhoneNumber number, Locale languageCode) {
+  public String getNameForValidNumber(PhoneNumber number, Locale languageCode) {
     String langStr = languageCode.getLanguage();
     String scriptStr = "";  // No script is specified
     String regionStr = languageCode.getCountry();
@@ -79,20 +79,38 @@ public class PhoneNumberToCarrierMapper {
   }
 
   /**
-   * As per {@link #getDescriptionForValidNumber(PhoneNumber, Locale)} but explicitly checks
-   * the validity of the number passed in.
+   * Gets the name of the carrier for the given phone number, in the language provided. As per
+   * {@link #getNameForValidNumber(PhoneNumber, Locale)} but explicitly checks the validity of
+   * the number passed in.
    *
-   * @param number  the phone number for which we want to get a text description
-   * @param languageCode  the language code for which the description should be written
-   * @return  a text description for the given language code for the given phone number, or empty
-   *     string if the number passed in is invalid
+   * @param number  the phone number for which we want to get a carrier name
+   * @param languageCode  the language code in which the name should be written
+   * @return  a carrier name for the given phone number, or empty string if the number passed in is
+   *     invalid
    */
-  public String getDescriptionForNumber(PhoneNumber number, Locale languageCode) {
+  public String getNameForNumber(PhoneNumber number, Locale languageCode) {
     PhoneNumberType numberType = phoneUtil.getNumberType(number);
     if (isMobile(numberType)) {
-      return getDescriptionForValidNumber(number, languageCode);
+      return getNameForValidNumber(number, languageCode);
     }
     return "";
+  }
+
+  /**
+   * Gets the name of the carrier for the given phone number only when it is 'safe' to display to
+   * users. A carrier name is considered safe if the number is valid and for a region that doesn't
+   * support
+   * {@linkplain http://en.wikipedia.org/wiki/Mobile_number_portability mobile number portability}.
+   *
+   * @param number  the phone number for which we want to get a carrier name
+   * @param languageCode  the language code in which the name should be written
+   * @return  a carrier name that is safe to display to users, or the empty string
+   */
+  public String getSafeDisplayName(PhoneNumber number, Locale languageCode) {
+    if (phoneUtil.isMobileNumberPortableRegion(phoneUtil.getRegionCodeForNumber(number))) {
+      return "";
+    }
+    return getNameForNumber(number, languageCode);
   }
 
   /**
